# tvday.github.io

./: index.html
css/: styles.css
docs/: index.html
generator/: pyproject.toml
generator/generator/: __main__.py
generator/staging/: config.json  config.yaml
generator/staging/html/: index.html
generator/staging/templates/: index.html
startbootstrap-resume-gh-pages/: index.html
